--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm install",
   "framework": "create-react-app",
-  "outputDirectory": "build"
+  "outputDirectory": "build",
+  "functions": {
+    "app/api/**/*.js": {
+      "runtime": "nodejs16.x"
+    }
+  }
 } 
