--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
   },
   "devDependencies": {
     "postcss": "^8.5.6"
+  },
+  "resolutions": {
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
+    "schema-utils": "^4.2.0"
   }
 }
